// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ReusableSections DonateSection 1`] = `
<section
  className="DonateSection Section slate"
  style={
    Object {
      "backgroundImage": "url(https://s3.amazonaws.com/operationcode-assets/background_flag.jpg",
    }
  }
>
  <h2
    className="Heading white"
    id=""
  >
    Donate
  </h2>
  <div
    className="content"
  >
    <div
      className="donateText"
    >
      <p>
        As a 501(c)(3) veteran-led nonprofit organization, our programs and services are maintained through the efforts of our volunteer staff. Your financial support allows us to continue helping the military community learn software development, enter the tech industry, and code the future.
      </p>
      <p>
        Thank you for supporting our mission!
      </p>
      <a
        className="Button primary outboundLink"
        href="https://secure.lglforms.com/form_engine/s/BRtP7QUKyHOyEYsZROsRew"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="screenReaderOnly"
        >
          Opens in new window
        </span>
        Donate Now
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-external-link-alt fa-w-18 externalLinkIcon"
          data-icon="external-link-alt"
          data-prefix="fas"
          role="img"
          style={
            Object {
              "width": "14px",
            }
          }
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 0 0 384 303.765V448H64V128h264a24.003 24.003 0 0 0 16.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </a>
    </div>
  </div>
</section>
`;

exports[`Storyshots ReusableSections JoinSection 1`] = `
<section
  className="JoinSection Section white"
  style={
    Object {
      "backgroundImage": "url(https://s3.amazonaws.com/operationcode-assets/background_marching-troops.jpg",
    }
  }
>
  <h2
    className="Heading slate"
    id=""
  >
    Join Today!
  </h2>
  <div
    className="content"
  >
    <div
      className="joinText"
    >
      <p>
        Operation Code is leading the way to expand opportunities for military veterans and their families to learn new skills, and build a career in the fast-growing technology sector.
        <br />
        Join our community for free and jumpstart your skills today!
      </p>
      <button
        className="Button secondary"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        type="button"
      >
        Join
      </button>
    </div>
  </div>
</section>
`;

exports[`Storyshots ReusableSections SignUpSection 1`] = `
<section
  className="Section white"
  style={Object {}}
>
  <h2
    className="Heading slate headingLines"
    id=""
  >
    New user?
  </h2>
  <div
    className="content"
  >
    <p>
      Are you ready to deploy your future? Join Operation Code today and launch your career in software development. Once you complete the form below, you’ll be invited to join our team on Slack. Make sure you stop in and say hi!
    </p>
    <button
      className="Button secondary"
      disabled={false}
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      type="button"
    >
      Sign Up
    </button>
  </div>
</section>
`;
